--- a/expensify-app/public/index.html
+++ b/expensify-app/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Expensify</title>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
     <div id="app"></div>
